智能报错+ui居中